e2e email confirmation (synchronous :( )

--- a/services/users/project/api/templates/confirmation_page.html
+++ b/services/users/project/api/templates/confirmation_page.html
@@ -16,7 +16,7 @@
 
     <footer class="text-center">
       <hr>
-      <p><a href="#" target="_blank">SUPPLY IT</a></p>
+      <p><a href="{{ login_uri }}" target="_blank">SUPPLY IT</a></p>
     </footer>
   </div>
 
