refresh token authentication

--- a/services/client/src/components/forms/FormErrors.css
+++ b/services/client/src/components/forms/FormErrors.css
@@ -31,3 +31,12 @@ li:before {
     content: "\2713";
     color: #23D160;
 }
+
+input.error {
+  border-color: red;
+}
+
+.input-feedback {
+  color: red;
+  margin-top: .25rem;
+}
