--- a/services/client/src/components/mystyle.css
+++ b/services/client/src/components/mystyle.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Source Sans Pro', sans-serif !important;
+}
+
 .ticked-list li {
     font-size: 16px;
     margin-left: 0px;
@@ -10,3 +14,13 @@
     background-size: 16px 13px;
     margin-top: 15px;
 }
+
+.intro {
+  background:linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.4)), url("https://images.unsplash.com/photo-1474440692490-2e83ae13ba29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
+  background-size: cover;
+  min-height: 100vh;
+  min-width: 100vw;
+  color: whitesmoke;
+  display: flex;
+}   
+
