--- a/services/client/src/components/Footer.css
+++ b/services/client/src/components/Footer.css
@@ -1,7 +1,146 @@
-.footer {
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    margin-top: 50px;
-    background-color: white;
+@media only screen and (max-width: 768px) {
+	h4 {
+		text-align: center;
+	}
+
+	.footer-list {
+		text-align: center;
+	}
+	.footer-middle {
+		margin-bottom: 2em;
+	}
+
+	.footer-right {
+		margin: 0 auto;
+		display: flex;
+		justify-content: center;
+	}
+}
+
+.footer-right p,
+.footer-middle p {
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.5);
+}
+
+ul.footer-list {
+	list-style: none;
+	padding-left: 0px;
+}
+ul.footer-list li {
+	color: rgba(0, 0, 0, 0.5);
+	line-height: 1.6;
+	font-weight: 500;
+}
+
+ul.footer-list li.phone {
+	font-size: 22px;
+	color: rgba(0, 0, 0, 1);
+}
+
+ul.footer-list li a {
+	color: rgba(0, 0, 0, 0.5);
+	font-weight: 500;
+	text-transform: none;
+}
+ul.footer-list a:hover {
+	color: rgba(54, 204, 142, 1);
+	text-decoration: none;
+	list-style: none;
+}
+
+.footer-middle h4,
+.footer-right h4 {
+	font-size: 24px;
+}
+
+.footer-middle {
+	text-align: center;
+	padding: 0;
+}
+
+.footer-right h4,
+.footer-left h4 {
+	margin-bottom: 10px;
+}
+
+#hero-cta-email {
+	height: 50px;
+	width: 60%;
+}
+
+.hero-cta__form input {
+	width: 100%;
+	float: left;
+	border: none;
+	background: rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	padding-left: 15px;
+	font-size: 16px;
+	line-height: 18px;
+	height: 18px;
+	font-weight: 400;
+	opacity: 1;
+	display: block;
+	margin-top: 10px;
+}
+
+.hero-cta__form input:focus {
+	outline: none;
+}
+
+.emailsignup {
+	font-size: 16px;
+	margin-left: 15px;
+	height: 50px;
+	width: 30%;
+	border: none;
+	background-color: #36cc8e;
+	color: #fff;
+	border-radius: 50px;
+	margin-top: 10px;
+}
+
+.trustlogos {
+	content: url(https://www.authenticireland.com/wp-content/uploads/2018/04/TopTrust1.png);
+	margin: 10px auto;
+	max-width: 100%;
+}
+
+.footer-trust_top {
+	width: 100%;
+	margin: 20px auto;
+	text-align: center;
+}
+
+.footer-trust_top p {
+	font-size: 18px;
+	font-weight: 400;
+	color: rgb(0, 0, 0, 0.5);
+}
+
+.footer-left {
+	padding-left: 0px;
+	justify-content: flex-start;
+}
+.footer-right {
+	margin: 0 auto;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.footer-main {
+	margin: 20px 0px 20px 0px;
+}
+
+.footer-copyright p {
+	font-size: 12px;
+	color: rgb(0, 0, 0, 0.5);
+	padding-top: 20px;
+}
+
+.footer-partners img {
+	float: right;
+	margin: 10px auto;
+	max-width: 100%;
 }
