--- a/services/client/src/components/forms/FormErrors.css
+++ b/services/client/src/components/forms/FormErrors.css
@@ -1,43 +1,14 @@
-.validation-list {
-    padding-left: 25px;
-}
-
-.validation-list > li {
-    /* display: block; */
-    display: none;
-}
-
-li:before {
-    font-family: 'Glyphicons Halflings';
-    font-size: 12px;
-    float: left;
-    margin-top: 4px;
-    margin-left: -17px;
-}
-
-.error {
-    color: #FF3860;
-}
-
-.error:before {
-    content: "\00D7";
-    color: #FF3860;
-}
-
-.success {
-    color: #23D160;
-}
-
-.success:before {
-    content: "\2713";
-    color: #23D160;
-}
-
 input.error {
-  border-color: red;
+  border-color: #dc3545;
 }
 
-.input-feedback {
-  color: red;
+.form-message.invalid {
+  color: #dc3545;
+  margin-top: .25rem;
+}
+
+
+.form-message.valid {
+  color: #4caf50;
   margin-top: .25rem;
 }
